# Thread-pool-Cplusplus

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
benchmarks/: CMakeLists.txt  bench_fibonacci.cpp  bench_submit.cpp  bench_thread_pool.cpp
cmake/: clang-tidy.cmake  sanitizers.cmake
docs/: invariants.md
include/thread_pool/: centralized_queue.hpp  task.hpp  thread_pool.hpp  work_stealing_queue.hpp
src/: thread_pool.cpp
tests/: CMakeLists.txt  test_queue.cpp  test_task.cpp  test_thread_pool.cpp
